--- a/google_api_project.ipynb
+++ b/google_api_project.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'AIzaSyBOfwTXC-Od-TVgWDuLbxVc4-8szUsVQOc'"
+    "API_KEY = '---'"
    ]
   },
   {
